...
                                    <constraint firstItem="izQ-or-zrZ" firstAttribute="height" secondItem="wVX-UK-24p" secondAttribute="height" id="s2Z-Kn-C35"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qIR-lU-I7e">
                                <rect key="frame" x="20" y="335" width="374" height="40"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="LVCLoginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="PRi-MY-dvy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
                                <state key="normal" title="LOGIN">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
